# legisgator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
legisgator/: __init__.py  api.py  cli.py  config.py  engine.py  extractor.py  logic_engine.py  printer.py  weakness.py
legisgator/prompts/: extractor.txt  scorer.txt
tests/: test_engine.py
