[project]
name = "legisgator"
version = "0.0.4"
description = "LLM‑compressed, Z3‑reinforced contract analyser"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "openai>=1.24",
  "typer>=0.12",
  "pydantic>=2.6",
  "z3-solver>=4.13",
  "rich>=13.7",
  "diskcache>=5.6",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "hypothesis>=6.100",
  "ruff",
  "black",
  "mypy",
  "pre-commit",
]

[tool.black]   # one code‑style = zero bike‑sheds
line-length = 88

[tool.mypy]
strict = true
